force-app/main/default/objects/Campaign/fields/Sansan_CI__CountOfFailureAutoCamMemeberRegistBatch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CountOfFailureAutoCamMemeberRegistBatch__c</fullName>
    <label>(Sansan)実行失敗数_キャンペーンメンバー自動登録</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>