force-app/main/default/objects/Campaign/fields/Sansan_CI__ErrorMessageOfAutoCamMemeberRegistBatch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ErrorMessageOfAutoCamMemeberRegistBatch__c</fullName>
    <label>(Sansan)エラーメッセージ_キャンペーンメンバー自動登録</label>
    <length>255</length>
    <type>Text</type>
</CustomField>