force-app/main/default/objects/Campaign/fields/Sansan_CI__IsAutoCampaignMemeberRegisterExcluded__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsAutoCampaignMemeberRegisterExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Sansan)キャンペーンメンバー自動登録対象外</label>
    <type>Checkbox</type>
</CustomField>