force-app/main/default/objects/Campaign/fields/Sansan_CI__IsNotExecutableAutoCamMemeberRegistBatch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsNotExecutableAutoCamMemeberRegistBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Sansan)実行不可_キャンペーンメンバー自動登録</label>
    <type>Checkbox</type>
</CustomField>