force-app/main/default/objects/Campaign/fields/Sansan_CI__IsTargetOfNextAutoCamMemeberRegistBatch__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsTargetOfNextAutoCamMemeberRegistBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Sansan)次回処理対象_キャンペーンメンバー自動登録</label>
    <type>Checkbox</type>
</CustomField>